activity section added

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
     </nav>
     <!-- Discover , card and activity -->
-    <div>
+    <div class="flex justify-between">
         <div>
             <!-- Discover section -->
-            <section>
+            <section class="mt-12">
                 <div class="flex justify-between items-center">
                     <div class="flex gap-4 items-center">
                         <p><img src="assets/checkbox.png" alt=""></p>
@@ -66,8 +66,8 @@
                 </div>
             </section>
             <!-- Card Section -->
-            <section>
-                <div class="grid grid-cols-3 gap-4 w-9/12 mx-auto">
+            <section class="mt-10">
+                <div class="grid grid-cols-3 gap-4  mx-auto">
                     <div>
                         <div>
                             <div class="card bg-base-100 w-96 shadow-sm">
@@ -235,8 +235,12 @@
 
         <div>
             <!-- Activity Section -->
-           <section>
-
+           <section class="mt-12" >
+               <div class="flex gap-2 items-center mb-4 ">
+                <p><img src="assets/activity.png" alt=""></p>
+                <p class="font-bold">Activity Log</p>
+               </div>
+               <button class="btn btn-primary ">Clear History </button>
            </section>
         </div>
     </div>
