add blogs secton

--- a/main.html
+++ b/main.html
@@ -33,32 +33,27 @@
             <div class="collapse bg-base-100 border border-base-300">
                 <input type="radio" name="my-accordion-1" checked="checked" />
                 <div class="collapse-title font-semibold">Question-1: What are the different ways to select an element in the DOM?</div>
-                <div class="collapse-content text-sm">Click the "Sign Up" button in the top right corner and follow the
-                    registration process.</div>
+                <div class="collapse-content text-sm">Use getElementById, getElementsByClassName, getElementsByTagName, querySelector, or querySelectorAll..</div>
             </div>
             <div class="collapse bg-base-100 border border-base-300">
                 <input type="radio" name="my-accordion-1" />
                 <div class="collapse-title font-semibold">Question-2: What is the difference between innerHTML, innerText, and textContent ??</div>
-                <div class="collapse-content text-sm">Click on "Forgot Password" on the login page and follow the
-                    instructions sent to your email.</div>
+                <div class="collapse-content text-sm">innerHTML gets HTML + text, innerText gets visible text, textContent gets all text.</div>
             </div>
             <div class="collapse bg-base-100 border border-base-300">
                 <input type="radio" name="my-accordion-1" />
                 <div class="collapse-title font-semibold">Question-3: What is event delegation in the DOM?</div>
-                <div class="collapse-content text-sm">Go to "My Account" settings and select "Edit Profile" to make
-                    changes.</div>
+                <div class="collapse-content text-sm">Add one event listener to a parent to handle events from its child elements.</div>
             </div>
             <div class="collapse bg-base-100 border border-base-300">
                 <input type="radio" name="my-accordion-1" />
                 <div class="collapse-title font-semibold">Question-4: What is event bubbling in the DOM?</div>
-                <div class="collapse-content text-sm">Go to "My Account" settings and select "Edit Profile" to make
-                    changes.</div>
+                <div class="collapse-content text-sm">An event starts from the target and bubbles up to its ancestors.</div>
             </div>
             <div class="collapse bg-base-100 border border-base-300">
                 <input type="radio" name="my-accordion-1" />
                 <div class="collapse-title font-semibold">Question-5: How do you create, add, and remove elements using JavaScript?</div>
-                <div class="collapse-content text-sm">Go to "My Account" settings and select "Edit Profile" to make
-                    changes.</div>
+                <div class="collapse-content text-sm">Use createElement, appendChild or append, and remove or removeChild.</div>
             </div>
         </div>
     </section>
