--- a/main.html
+++ b/main.html
@@ -11,24 +11,24 @@
 
 <body class="w-10/12 mx-auto ">
     <nav>
-        <div class="navbar bg-base-100 shadow-sm ">
+        <div class="navbar bg-base-100 shadow-sm rounded-lg">
             <div class="flex-1 flex items-center">
                 <div>
-                    <img src="assets/board.png" alt="">
+                    <img src="assets/logo.png" alt="">
                 </div>
                 <div class="flex-1">
-                    <a class="btn btn-ghost text-xl">DevBoard</a>
+                    <a class="font-bold ml-2 text-xl">DevBoard</a>
                 </div>
             </div>
 
             <div>
-                <button class="btn btn-primary " id="back">Back</button>
+                <button class="btn btn-primary " id="back">Back to Desk</button>
             </div>
 
         </div>
     </nav>
-    <section class="mt-14">
-        <h1 class="text-center font-bold">Blogs</h1>
+    <section class="mt-6">
+        <h1 class="text-center font-bold text-lg mb-4">Blogs</h1>
         <div>
             <div class="collapse bg-base-100 border border-base-300">
                 <input type="radio" name="my-accordion-1" checked="checked" />
